kubernetes/base/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-keycloak
  labels:
    app: saas-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saas-keycloak
  template:
    metadata:
      labels:
        app: saas-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.0
          args: ['start']
          ports:
            - containerPort: 8080
            - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: saas-keycloak
spec:
  selector:
    app: saas-keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
